# lynx

./: .gitignore  .habitat  .tools_shared  AGENTS.md  CONTRIBUTING.md  DEPS  DEPS.clay  config.gni  pnpm-lock.yaml  pnpm-workspace.yaml
clay/: BUILD.gn
clay/common/: config.gni  thread_host_holder.cc
clay/common/graphics/: shared_drawable_image.cc
clay/flow/: frame_timings.h
clay/flow/layers/: drawable_image_layer.cc  layer_raster_cache_item.cc  layer_tree.cc  picture_layer.cc
clay/fml/platform/win/: file_win.cc
clay/gfx/animation/: animation_handler.cc  animation_handler.h  animation_handler_unittests.cc  keyframes_manager.cc  value_animator.cc  value_animator.h  value_animator_unittests.cc
clay/gfx/image/: image.h  svg_image.cc  svg_image.h
clay/gfx/shared_image/: BUILD.gn  android_egl_image_representation.cc  cgl_image_representation.mm  d3d_texture_image_backing.cc  eagl_image_representation.mm  epoxy_shm_image_representation.cc
clay/gfx/shared_image/utils/: d3d11_device_creator.cc  d3d11_device_creator.h  functions_angle.cc  gl_texture_converter.cc
clay/lynx_adaptor/: painting_context_clay.cc  perf_controller_clay.cc  perf_controller_clay.h  resource_loader_embedder.cc  resource_loader_embedder.h  ui_delegate_clay.cc  ui_delegate_clay.h
clay/net/: BUILD.gn
clay/net/url/: url_helper.cc  url_helper.h  url_helper_test.cc
clay/public/: value.h
clay/shell/common/: BUILD.gn  rasterizer.cc  scroll_fluency_monitor_delegate.h  shell.cc  vsync_waiter_macos.mm
clay/shell/common/services/compositor/: compositor_service.cc
clay/shell/platform/headless/gl/: clay_headless_renderer_angle.cc
clay/shell/platform/windows/egl/: manager.cc
clay/ui/: BUILD.gn
clay/ui/common/: build.gni  fps_tracer.cc  fps_tracer.h  gap_task.h
clay/ui/component/: base_image_view.cc  base_view.cc  base_view.h  build.gni  builtin_views.cc  intersection_observer.cc  intersection_observer.h  keyframe_animator_unittests.cc  keywords.cc  keywords.h  keywords.in  page_view.cc  page_view.h  page_view_unittests.cc  scroll_view.cc  scroll_view.h  scroll_wrapper.cc  scrollable.cc  scrollable.h  view_context.cc  view_context.h
clay/ui/component/expose_manager/: expose_observer.cc
clay/ui/component/list/: base_list_view.cc
clay/ui/component/list/list_container/: list_container_view.cc  list_container_view.h  list_container_wrapper.cc  list_container_wrapper.h
clay/ui/component/nested_scroll/: nested_scrollable.cc
clay/ui/component/view_callback/: list_container_event_callback_manager.cc  list_container_event_callback_manager.h  scroll_event_callback_manager.h
clay/ui/event/: gesture_event.cc
clay/ui/gesture/: drag_gesture_recognizer.cc  mouse_cursor_manager.cc  mouse_cursor_manager.h  mouse_region_manager.cc  mouse_region_manager.h  mouse_wheel_phase_handler.cc  velocity_tracker.cc  velocity_tracker.h  velocity_tracker_unittests.cc
clay/ui/platform/common/: resource_loader_common_net.cc
clay/ui/resource/: image_cache.h  image_fetcher.cc  image_fetcher.h  image_manager.cc  image_manager.h  image_resource_fetcher.cc  image_resource_fetcher.h
clay/ui/shadow/: text_render.cc
clay/version/: BUILD.gn
core/list/: BUILD.gn  decoupled_adapter_helper.cc  decoupled_batch_list_adapter.cc  decoupled_default_list_adapter.cc  decoupled_grid_layout_manager.cc  decoupled_item_holder.cc  decoupled_linear_layout_manager.cc  decoupled_linear_layout_manager.h  decoupled_list_adapter.cc  decoupled_list_adapter.h  decoupled_list_anchor_manager.cc  decoupled_list_anchor_manager.h  decoupled_list_children_helper.cc  decoupled_list_container_impl.cc  decoupled_list_container_impl.h  decoupled_list_event_manager.cc  decoupled_list_event_manager.h  decoupled_list_layout_manager.cc  decoupled_list_layout_manager.h  decoupled_list_orientation_helper.cc  decoupled_list_types.h  decoupled_staggered_grid_layout_manager.cc  list_container_delegate.h  list_element_delegate.h
core/renderer/ui_component/list/mediator/: BUILD.gn  list_item_mediator.cc  list_mediator.cc
core/renderer/ui_wrapper/common/: BUILD.gn  native_prop_bundle.cc  native_prop_bundle.h
core/renderer/ui_wrapper/painting/: BUILD.gn  native_painting_context_platform_ref.cc  native_painting_context_platform_ref.h  painting_context.h  platform_renderer.h  platform_renderer_impl.cc  platform_renderer_impl.h
core/runtime/jsi/jsvm/: BUILD.gn  jsvm_runtime.cc
core/services/fluency/: BUILD.gn
core/services/fluency/harmony/: fluency_trace_helper_harmony.cc
core/value_wrapper/: BUILD.gn  value_impl_unittest.cc
core/value_wrapper/android/: value_impl_android.h  value_impl_android_unittest.cc
core/value_wrapper/darwin/: value_impl_darwin_unittest.mm
core/value_wrapper/harmony/: value_impl_napi.cc
devtool/base_devtool/common/: BUILD.gn  devtool_global_slot_common.cc  devtool_global_slot_common.h  devtool_slot_common.h
devtool/embedder/common/: BUILD.gn
devtool/embedder/core/: BUILD.gn  debug_bridge_embedder.cc  debug_bridge_embedder.h  debug_state_listener_embedder.h  devtool_platform_embedder.cc  devtool_platform_embedder.h  devtoolng_delegate_embedder.cc  inspector_owner_embedder.cc  inspector_owner_embedder.h  page_reload_helper_embedder.cc  page_reload_helper_embedder.h  screen_cast_helper_embedder.cc  screen_cast_helper_embedder.h
platform/android/: BUILD.gn  build.gradle  gradle.properties  settings.gradle
platform/android/api/: doxygen.cfg  lynx_android.api
platform/android/lynx_android/: BUILD.gn  build.gradle  gradle.properties  proguard-rules.pro
platform/android/lynx_devtool/: BUILD.gn
platform/android/lynx_library_plugin/: build.gradle  gradle.properties
platform/android/lynx_xelement/lynx_xelement/: build.gradle
platform/android/lynx_xelement/lynx_xelement_webview/: build.gradle  gradle.properties
platform/darwin/ios/lynx_xelement/: BUILD.gn
platform/embedder/lynx_devtool/: BUILD.gn  SwitchPersist.mm  devtool_env_embedder.cc  devtool_env_embedder.h  switch_persist.cc  switch_persist.h  switch_persist_win.cc
platform/embedder/plugin/cef/: CMakeLists.txt
platform/harmony/lynx_harmony/: BUILD.gn
(+1348 files in other folders)
