# Copyright 2025 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../../testing/test.gni")
import("../Lynx.gni")

list_container_shared_sources = [
  "decoupled_list_types.h",
  "list_container_delegate.h",
  "list_element_delegate.h",
  "list_item_element_delegate.h",
]

if (disable_list_platform_implementation) {
  list_container_shared_sources += [
    "decoupled_adapter_helper.cc",
    "decoupled_adapter_helper.h",
    "decoupled_batch_list_adapter.cc",
    "decoupled_batch_list_adapter.h",
    "decoupled_default_list_adapter.cc",
    "decoupled_default_list_adapter.h",
    "decoupled_grid_layout_manager.cc",
    "decoupled_grid_layout_manager.h",
    "decoupled_item_holder.cc",
    "decoupled_item_holder.h",
    "decoupled_linear_layout_manager.cc",
    "decoupled_linear_layout_manager.h",
    "decoupled_list_adapter.cc",
    "decoupled_list_adapter.h",
    "decoupled_list_anchor_manager.cc",
    "decoupled_list_anchor_manager.h",
    "decoupled_list_children_helper.cc",
    "decoupled_list_children_helper.h",
    "decoupled_list_container_impl.cc",
    "decoupled_list_container_impl.h",
    "decoupled_list_event_manager.cc",
    "decoupled_list_event_manager.h",
    "decoupled_list_layout_manager.cc",
    "decoupled_list_layout_manager.h",
    "decoupled_list_orientation_helper.cc",
    "decoupled_list_orientation_helper.h",
    "decoupled_list_types.h",
    "decoupled_staggered_grid_layout_manager.cc",
    "decoupled_staggered_grid_layout_manager.h",
    "list_animation_manager.cc",
    "list_animation_manager.h",
  ]
  if (!defined(enable_list_container_animation) ||
      enable_list_container_animation) {
    list_container_shared_sources += [
      "list_animation_manager_impl.cc",
      "list_animation_manager_impl.h",
    ]
  } else {
    list_container_shared_sources += [
      "list_animation_manager_default.cc",
      "list_animation_manager_default.h",
    ]
  }
} else {
  list_container_shared_sources += [
    "decoupled_list_container_default.cc",
    "decoupled_list_container_default.h",
  ]
}

lynx_core_source_set("list_container") {
  sources = list_container_shared_sources
  public_deps = [
    "../build:build",
    "../renderer/trace:renderer_trace",
  ]
  if (!defined(enable_list_container_animation) ||
      enable_list_container_animation) {
    deps = [ "../animation/lynx_basic_animator:lynx_basic_animator" ]
  }
}

list_container_testset_shared_sources = []

if (disable_list_platform_implementation) {
  list_container_testset_shared_sources += [
    "decoupled_default_list_adapter_unittest.cc",
    "decoupled_list_adapter_unittest.cc",
    "decoupled_list_anchor_manager_unittest.cc",
    "decoupled_list_children_helper_unittest.cc",
    "decoupled_list_container_impl_unittest.cc",
    "decoupled_list_event_manager_unittest.cc",
    "decoupled_list_layout_manager_unittest.cc",
    "decoupled_staggered_grid_layout_manager_unittest.cc",
    "testing/fiber_diff_info.h",
    "testing/mock_list_element.h",
    "testing/radon_data_source.h",
    "testing/utils.h",
  ]
}

unittest_set("list_container_testset") {
  sources = list_container_testset_shared_sources
  public_deps = [ ":list_container" ]
  deps = [
    "../public",
    "../renderer/dom:dom",
  ]
}

unittest_exec("list_container_testset_exec") {
  sources = []
  deps = [ ":list_container_testset" ]
}

group("list_container_testset_group") {
  testonly = true
  deps = [
    ":list_container_testset",
    ":list_container_testset_exec",
  ]
}
