# Copyright 2024 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../../../config.gni")

source_set("base_devtool_common_sources") {
  sources = [
    "devtool_global_slot_common.cc",
    "devtool_global_slot_common.h",
    "devtool_slot_common.cc",
    "devtool_slot_common.h",
  ]

  include_dirs = [ "../../../third_party/debug_router/src/" ]

  deps = [ "../native:base_devtool_common_lib" ]
}
