# Copyright 2025 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

assert(is_harmony)

import("../../../core/Lynx.gni")
import("../../../core/base_targets.gni")

source_set("native") {
  public_deps = [ "src/main/cpp" ]
}
