# Copyright 2025 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../../../../config.gni")
import("../../../Lynx.gni")
import("../../../base_targets.gni")

lynx_core_source_set("jsvm") {
  sources = [
    "jsvm_context_wrapper.cc",
    "jsvm_context_wrapper.h",
    "jsvm_helper.cc",
    "jsvm_helper.h",
    "jsvm_host_function.cc",
    "jsvm_host_function.h",
    "jsvm_host_object.cc",
    "jsvm_host_object.h",
    "jsvm_runtime.cc",
    "jsvm_runtime.h",
    "jsvm_runtime_wrapper.cc",
    "jsvm_runtime_wrapper.h",
    "jsvm_util.h",
  ]
}
