# Copyright 2023 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.
#

import("//${lynx_dir}/build_overrides/darwin.gni")
import("../../../../config.gni")

group("XElement") {
  deps = [ ":XElement_podspec" ]
}

podspec_target("XElement_podspec") {
  output_name = "XElement.podspec"
  output_path = rebase_path("//")
  root_specification = {
    name = "XElement"
    version = "$lynx_version"
    summary = "The framework of XElement"
    homepage = "https://github.com/lynx-family/lynx"
    license = "Apache 2.0"
    author = "Lynx"
    source = {
      git = "https://github.com/lynx-family/lynx.git"
    }
    compiler_flags = [ "-fno-rtti" ]
    ios = {
      deployment_target = "10.0"
    }
    pod_target_xcconfig = {
      CLANG_CXX_LANGUAGE_STANDARD = "gnu++17"
      OTHER_CPLUSPLUSFLAGS = "-fno-c++-static-destructors"
      GCC_PREPROCESSOR_DEFINITIONS = []
      if (!is_debug) {
        GCC_PREPROCESSOR_DEFINITIONS += [ "NDEBUG=1" ]
      }
    }

    default_subspecs = [
      "Input",
      "Overlay",
      "ScrollCoordinator",
      "ViewPager",
      "SVG",
      "Refresh",
      "Behavior",
    ]
  }

  deps = [
    ":Behavior",
    ":Input",
    ":Overlay",
    ":Refresh",
    ":SVG",
    ":ScrollCoordinator",
    ":ViewPager",
  ]
}

subspec_target("Input") {
  sources = [
    "input/LynxUIBaseInput.h",
    "input/LynxUIBaseInput.m",
    "input/LynxUIBaseInputShadowNode.h",
    "input/LynxUIBaseInputShadowNode.m",
    "input/LynxUIInput.h",
    "input/LynxUIInput.m",
    "input/LynxUITextArea.h",
    "input/LynxUITextArea.m",
    "input/key_listener/LynxDialerKeyListener.h",
    "input/key_listener/LynxDialerKeyListener.m",
    "input/key_listener/LynxDigitKeyListener.h",
    "input/key_listener/LynxDigitKeyListener.m",
    "input/key_listener/LynxInputType.h",
    "input/key_listener/LynxKeyListener.h",
    "input/key_listener/LynxNumberKeyListener.h",
    "input/key_listener/LynxNumberKeyListener.m",
    "input/key_listener/LynxTextKeyListener.h",
    "input/key_listener/LynxTextKeyListener.m",
  ]
  public_header_files = [
    "input/key_listener/LynxDialerKeyListener.h",
    "input/key_listener/LynxDigitKeyListener.h",
    "input/key_listener/LynxKeyListener.h",
    "input/key_listener/LynxNumberKeyListener.h",
    "input/key_listener/LynxTextKeyListener.h",
    "input/key_listener/LynxInputType.h",
    "input/LynxUIBaseInput.h",
    "input/LynxUIInput.h",
    "input/LynxUITextArea.h",
    "input/LynxUIBaseInputShadowNode.h",
  ]
  dependency = lynx_dependency
}

subspec_target("Overlay") {
  sources = [
    "overlay/LynxOverlayContainer.h",
    "overlay/LynxOverlayContainer.m",
    "overlay/LynxOverlayGlobalManager.h",
    "overlay/LynxOverlayGlobalManager.m",
    "overlay/LynxUIOverlay.h",
    "overlay/LynxUIOverlay.m",
  ]
  public_header_files = [
    "overlay/LynxOverlayContainer.h",
    "overlay/LynxOverlayGlobalManager.h",
    "overlay/LynxUIOverlay.h",
  ]
  dependency = lynx_dependency
}

subspec_target("ScrollCoordinator") {
  sources = [
    "scroll_coordinator/LynxUIScrollCoordinator.h",
    "scroll_coordinator/LynxUIScrollCoordinator.m",
    "scroll_coordinator/LynxUIScrollCoordinatorHeader.h",
    "scroll_coordinator/LynxUIScrollCoordinatorHeader.m",
    "scroll_coordinator/LynxUIScrollCoordinatorSlot.h",
    "scroll_coordinator/LynxUIScrollCoordinatorSlot.m",
    "scroll_coordinator/LynxUIScrollCoordinatorSlotDrag.h",
    "scroll_coordinator/LynxUIScrollCoordinatorSlotDrag.m",
    "scroll_coordinator/LynxUIScrollCoordinatorToolbar.h",
    "scroll_coordinator/LynxUIScrollCoordinatorToolbar.m",
    "scroll_coordinator/NSObject+LynxScrollCoordinatorKVO.h",
    "scroll_coordinator/NSObject+LynxScrollCoordinatorKVO.m",
    "scroll_coordinator/UIScrollView+ScrollCoordinator.h",
    "scroll_coordinator/UIScrollView+ScrollCoordinator.m",
  ]
  public_header_files = [
    "scroll_coordinator/LynxUIScrollCoordinator.h",
    "scroll_coordinator/LynxUIScrollCoordinatorHeader.h",
    "scroll_coordinator/LynxUIScrollCoordinatorSlot.h",
    "scroll_coordinator/LynxUIScrollCoordinatorSlotDrag.h",
    "scroll_coordinator/LynxUIScrollCoordinatorToolbar.h",
  ]
  dependency = lynx_dependency
  dependency += [ "XElement/ViewPager" ]
}

subspec_target("ViewPager") {
  sources = [
    "viewpager/LynxUIViewPager.h",
    "viewpager/LynxUIViewPager.m",
    "viewpager/LynxUIViewPagerItem.h",
    "viewpager/LynxUIViewPagerItem.m",
  ]
  public_header_files = [
    "viewpager/LynxUIViewPager.h",
    "viewpager/LynxUIViewPagerItem.h",
  ]
  dependency = lynx_dependency
}

subspec_target("SVG") {
  sources = [
    "svg/LynxSVGView.h",
    "svg/LynxSVGView.m",
    "svg/LynxUISVG.h",
    "svg/LynxUISVG.m",
  ]
  public_header_files = [
    "svg/LynxSVGView.h",
    "svg/LynxUISVG.h",
  ]

  dependency = [ [
        "ServalSVG",
        ">= 0.0.17",
      ] ]

  dependency += lynx_dependency
}

subspec_target("Refresh") {
  sources = [
    "refresh/LynxUIRefresh.h",
    "refresh/LynxUIRefresh.m",
    "refresh/LynxUIRefreshHeader.h",
    "refresh/LynxUIRefreshHeader.m",
    "refresh/LynxUIRefreshShadowNode.h",
    "refresh/LynxUIRefreshShadowNode.m",
  ]
  public_header_files = [
    "refresh/LynxUIRefresh.h",
    "refresh/LynxUIRefreshHeader.h",
    "refresh/LynxUIRefreshShadowNode.h",
  ]

  dependency = [ [
        "MJRefresh",
        ">= 3.6.1",
      ] ]

  dependency += lynx_dependency
}

subspec_target("Behavior") {
  sources = [
    "behavior/LynxUIInputAutoRegistry.h",
    "behavior/LynxUIInputAutoRegistry.m",
    "behavior/LynxUIOverlayAutoRegistry.h",
    "behavior/LynxUIOverlayAutoRegistry.m",
    "behavior/LynxUIRefreshAutoRegistry.h",
    "behavior/LynxUIRefreshAutoRegistry.m",
    "behavior/LynxUISVGAutoRegistry.h",
    "behavior/LynxUISVGAutoRegistry.m",
    "behavior/LynxUIScrollCoordinatorAutoRegistry.h",
    "behavior/LynxUIScrollCoordinatorAutoRegistry.m",
    "behavior/LynxUITextAreaAutoRegistry.h",
    "behavior/LynxUITextAreaAutoRegistry.m",
    "behavior/LynxUIViewPagerAutoRegistry.h",
    "behavior/LynxUIViewPagerAutoRegistry.m",
  ]
  public_header_files = [
    "behavior/LynxUIInputAutoRegistry.h",
    "behavior/LynxUIOverlayAutoRegistry.h",
    "behavior/LynxUIRefreshAutoRegistry.h",
    "behavior/LynxUIScrollCoordinatorAutoRegistry.h",
    "behavior/LynxUIViewPagerAutoRegistry.h",
    "behavior/LynxUISVGAutoRegistry.h",
    "behavior/LynxUITextAreaAutoRegistry.h",
  ]

  dependency = lynx_dependency
  dependency += [
    "XElement/Input",
    "XElement/Overlay",
    "XElement/ScrollCoordinator",
    "XElement/ViewPager",
    "XElement/SVG",
    "XElement/Refresh",
  ]
}
