# Copyright 2026 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../../../../../testing/test.gni")
import("../../../../Lynx.gni")

list_mediator_shared_sources = [
  "list_item_mediator.cc",
  "list_item_mediator.h",
  "list_mediator.cc",
  "list_mediator.h",
]

lynx_core_source_set("list_mediator") {
  sources = list_mediator_shared_sources
  deps = [
    "../../../../../base/src:base_log_headers",
    "../../../../list:list_container",
    "../../../trace:renderer_trace",
  ]
}
